# release-version

./: .pre-commit-config.yaml  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.github/workflows/: publish.yml  test.yml
src/release_version/: config.py  main.py  utils.py
tests/: test_cli.py
